# emberflow

./: .gitignore  Cargo.toml  DISTRIBUTION.md  README.md  cliff.toml
.github/workflows/: emberflow-release.yml  emberflow.yml
adapters/claude/: CLAUDE.md  README.md  install.sh
adapters/claude/hooks/: emberflow-bash-guard.sh  emberflow-write-guard.sh
adapters/codex/: README.md  install.sh  root.instructions.md
docs/: README.md  architecture.md  integration.md  projections.md  state-model.md
mcp/: README.md
runtime/: README.md
runtime/sqlite/: schema.sql
schemas/: README.md
specs/: emberflow-canonical-track-model.spec  emberflow-client-contract.spec  emberflow-execution-guard.spec  emberflow-mcp-stdio-transport.spec  emberflow-mcp-surface.spec  emberflow-project-layout.spec  emberflow-projection-engine.spec  emberflow-runtime-store.spec  emberflow-v1.spec
src/: error.rs  lib.rs  protocol.rs
src/mcp/: mod.rs  server.rs  stdio.rs  surface.rs
src/runtime/: layout.rs  mod.rs  projections.rs  service.rs  store.rs
tests/: adapters.sh  ci.sh  claude_adapter.rs  client_contract.rs  codex_adapter.rs  emberflow_v1.rs  layout.sh  mcp_stdio.rs  mcp_surface.rs  package_metadata.rs  product_cli.rs  project_layout.rs  projection_dirty_targets.rs  projection_engine.rs  runtime_store.rs
