[package]
name = "emberflow"
version = "0.2.0"
edition = "2021"
description = "Local-first canonical MCP runtime and product surface for EmberFlow"
license = "MIT"
homepage = "https://github.com/arnaudlewis/emberflow"
repository = "https://github.com/arnaudlewis/emberflow"
documentation = "https://github.com/arnaudlewis/emberflow/tree/main/docs"

[lib]
doctest = false

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
